added changes to make it work

--- a/app/src/main/res/layout/activity_edit_student.xml
+++ b/app/src/main/res/layout/activity_edit_student.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -5,24 +6,27 @@
     android:padding="16dp">
 
     <EditText
-        android:id="@+id/editName"
+        android:id="@+id/studentIdInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Edit Student Name"
-        android:minHeight="48dp" />
+        android:hint="Student ID"
+        android:inputType="text"
+        android:layout_marginBottom="16dp" />
 
     <EditText
-        android:id="@+id/editId"
+        android:id="@+id/studentNameInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Edit Student ID"
-        android:minHeight="48dp" />
+        android:hint="Student Name"
+        android:inputType="text"
+        android:layout_marginBottom="16dp" />
 
     <Button
         android:id="@+id/updateButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Update" />
+        android:text="Update"
+        android:layout_marginBottom="8dp" />
 
     <Button
         android:id="@+id/deleteButton"
@@ -30,4 +34,5 @@
         android:layout_height="wrap_content"
         android:text="Delete"
         android:backgroundTint="#FF0000" />
+
 </LinearLayout>
