--- a/app/src/main/res/layout/activity_new_student.xml
+++ b/app/src/main/res/layout/activity_new_student.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -5,22 +6,25 @@
     android:padding="16dp">
 
     <EditText
-        android:id="@+id/inputName"
+        android:id="@+id/studentIdInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Student Name"
-        android:minHeight="48dp" />
+        android:hint="Student ID"
+        android:inputType="text"
+        android:layout_marginBottom="16dp" />
 
     <EditText
-        android:id="@+id/inputId"
+        android:id="@+id/studentNameInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Student ID"
-        android:minHeight="48dp" />
+        android:hint="Student Name"
+        android:inputType="text"
+        android:layout_marginBottom="16dp" />
 
     <Button
         android:id="@+id/saveButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Save" />
+
 </LinearLayout>
