--- a/app/src/main/res/layout/activity_student_details.xml
+++ b/app/src/main/res/layout/activity_student_details.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -5,20 +6,38 @@
     android:padding="16dp">
 
     <ImageView
-        android:id="@+id/studentDetailsImage"
-        android:layout_width="128dp"
-        android:layout_height="128dp"
-        android:src="@drawable/student_pic" />
+        android:id="@+id/studentImage"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="16dp" />
 
     <TextView
-        android:id="@+id/studentDetailsName"
+        android:id="@+id/studentName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Name: " />
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="8dp" />
 
     <TextView
-        android:id="@+id/studentDetailsId"
+        android:id="@+id/studentId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ID: " />
+        android:textSize="16sp"
+        android:layout_marginBottom="8dp" />
+
+    <TextView
+        android:id="@+id/studentStatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:layout_marginBottom="16dp" />
+
+    <Button
+        android:id="@+id/editButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Edit" />
+
 </LinearLayout>
